--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "karma-ie-launcher": "^0.2.0",
     "karma-mocha": "^0.2.1",
     "karma-mocha-reporter": "^1.1.3",
-    "karma-safari-launcher": "^0.1.1",
     "karma-sinon-chai": "^1.1.0",
     "mocha": "^2.3.4",
     "rimraf": "^2.4.5",
+    "run-sequence": "^1.1.5",
     "sinon": "^1.17.2"
   }
 }
